--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -118,13 +118,27 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
 
 The ozone observed at a surface station is the net result of various physio-chemical processes: surface dry deposition and uptake in vegetation, titration by nearby \nox emissions, regional photochemical ozone formation and atmospheric transport of background ozone levels, each of which may have seasonal and diurnal systematic variations. Episodes with elevated levels of ozone are observed during the summer half year when certain meteorological situations (dry, sunny, cyclonic stable weather) promote the formation of ozone over the European continent. 
 
-There were four main ozone episodes in Europe in 2019 that occurred around days 23-28 in each of the month April, June, July and August and at a varying degree in different parts of the continent. Extreme levels of ozone even exceeding EU's alert threshold of 240 \ug were observed in several countries as explained in more detail below.
+There were four main ozone episodes in Europe in 2019 that occurred around days 23-28 in each of the months April, June, July and August and at a varying degree in different parts of the continent. Extreme levels of ozone even exceeding EU's alert threshold of 240 \ug were observed in several countries as explained in more detail below.
 
-The April episode was linked to a blocking high pressure located over western parts of Russia and Belarus, setting up southeasterly winds bringing warm and dry continental, polluted air masses northwards particularly to the Baltic countries, Scandinavia and parts of the UK. Northern Norway registered the second highest surface ozone level (82 ppb) since the start of the monitoring in 1990. Likely, agricultural fires in East Europe (Ukraine and Russia) contributed to the peak ozone levels.
+The April episode was linked to a blocking high pressure located over western parts of Russia and Belarus, setting up southeasterly winds bringing warm and dry continental air masses northwards particularly to the Baltic countries, Scandinavia and parts of the UK. At 25 April Northern Norway registered the second highest surface ozone level (82 ppb) since the start of the monitoring in 1990. Likely, agricultural fires in East Europe (Ukraine and Russia) contributed to the peak ozone levels.
 
-June 2019 was the warmest June on record, globally as well as for Europe (\citep{Bissolli:2020}). During 26-28 June a persistent high pressure over central Europe brought very hot air masses into central and western parts of the continent. In Germany temperatures just below 40 C
+June 2019 was the warmest June on record, globally as well as for Europe (\citep{Bissolli:2020}). During 26-28 June a persistent high pressure over central Europe brought very hot air masses into central and western parts of the continent. In Germany, temperatures just below 40 \degrees C was observed and in France 13 stations surpassed France’s 2003 records, exceeding a temperature of 44.1 \degrees C. Surface ozone levels above EU's information threshold (180 \ug) were observed in many countries during this period. At Ispra in Italy an extreme level of 142 ppb (285 \ug) was reported on 28 June, breaking EU's alert threshold of 240 \ug. Figure~\ref{fig:O3_20190628} shows the modelled and observed daily maximum ozone levels for 28 June. 
 
-Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics for 2019 with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure ~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
+\begin{figure}[H]
+  \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190628_MAXO3_ModObs_emep_H500.pdf}}
+\caption{Modelled and measured daily max ozone [ppb] 28 June 2019.}
+\label{fig:O3_20190628}
+\end{figure}
+
+One month later, during 24-26 July a new and even more intense (albeit shorter) heat wave struck central and northwestern part of Europe, and national temperature records were set in the UK and Germany (38.7 \degrees C in the UK and 40.5 \degrees C in Germany). Along with this heat wave, peak ozone levels were measured. In the UK, an hourly maximum level of 119 ppb (238 \ug) was observed at Sibton 25 July, the highest level measured at this site since 1996. At Vredepeel in the Netherlands, the ozone levels peaked at 127 ppb (254 \ug) on the same day and thereby broke EU's alert threshold. The extent of the ozone episode on 25 July is seen on Figure~\ref{fig:O3_20190725}, showing the modelled and observed values. 
+
+\begin{figure}[H]
+  \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190725_MAXO3_ModObs_emep_H500.pdf}}
+\caption{Modelled and measured daily max ozone [ppb] 25 July 2019.}
+\label{fig:O3_20190725}
+\end{figure}
+
+For the year 2019 as a whole, Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure ~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
 
 \begin{figure}[H]
   \centering
@@ -153,23 +167,7 @@ AOT40 and POD$_1$ are indicators for effects on vegetation. UNECE's critical lev
 
 On the contrary, POD$_1$ takes into account this soil moisture deficit, giving an estimate of the actual flux of ozone into the plants. It is interesting to see the substantial difference in the geographical pattern of AOT40 and POD$_1$ in Figures~\ref{fig:indicators_emep} (c) and \ref{fig:indicatorPOD}. Whereas AOT40 shows a north-south gradient with peak values over southern/central parts of the continent, POD$_1$ is highest along the coast and shows a minimum in central parts of Europe just where high values of AOT40 are seen. This reflects the importance of the soil moisture effect for these two metrics for ozone damage to vegetation. For POD$_1$ the limit value depends on the species and Mills et al (2011) give a value of 4 mmol m$^{-2}$ for birch and beech and 8 mmol m$^{-2}$ for Norway spruce. The results in Figures~\ref{fig:indicators_emep} (c) and \ref{fig:indicatorPOD} indicate that both these limit values were exceeded in most of Europe. The modelled levels of POD$_1$ could, however, not be validated by observations. 
 
-
-\begin{figure}[H]
-  \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190628_MAXO3_ModObs_emep_H500.pdf}}
-\caption{Modelled and measured daily max ozone [ppb] 28 June 2019.}
-\label{fig:O3_20190628}
-\end{figure}
-
-
-\begin{figure}[H]
-  \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190725_MAXO3_ModObs_emep_H500.pdf}}
-\caption{Modelled and measured daily max ozone [ppb] 25 July 2019.}
-\label{fig:O3_20190725}
-\end{figure}
-
-
-A more detailed comparison between model and measurements for ozone for the year 2018 can be found in \cite{WEB2020:O3}.
-
+Surface ozone levels and the associated metrics were fairly high in 2019 which partly could be explained by several heat waves striking the continent in the summer half year. This is an indication of the strong link between climate and surface ozone and raises the issue of climate induced changes of ozone in the years to come. A main question is to what extent such changes will outweigh the benefits of reduced ozone precursors emissions. 
 
 
 %=========================================
