--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -73,20 +73,18 @@ In order to allow for consistent comparisons, the trend is provided as a relativ
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
-The SO$_x$ emissions has declined by more than 80\% in Europe the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends the latter years (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}).
+The SO$_x$ emissions has declined by more than 80\% in Europe the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends the latter years (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}).
 
 On average the reductions in observations for the last 20 years (2000-2019) are -3.6, -3.0 and -2.9  \% yr$^{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -4.9, -3.6 and -4.0 \% yr$^{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the trend is higher in observations but within the confidence interval to the modelled trends. 
 
-
 The  greater decrease in \soii compared to secondary sulphate is due to a combination of higher oxidation rate (hence more \soii converted to \soiv) and increased dry deposition rate of \soii. The oxidation capacity of the atmosphere have increased as the emissions have decreased \cite{Dalsoren2016}, and the clouds have become less acidic due to less \soii and only slightly decrease in \nhiii, which has increased the oxidation rate of \soii to \soiv via the ozone pathway (\cite{Banzhaf2015, Redington2009}). In addition, less acidity in the environment probably leads to more efficient dry deposition of \soii (\cite{Fowler_et_al:2009}) 
-
 
 
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/sulfur_trends.png}
-	\caption{\label{fig:SOx_trends}Trends in sulfur components from 2010-2019 for EMEP observations and model. The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles}
+	\caption{\label{fig:SOx_trends}Trends in sulfur components from 2010-2019 for EMEP observations and model. The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in SOx emission is indicated in the plot of \soii with secondary y-axes}
 \end{figure}
 
 \begin{table}
@@ -177,7 +175,7 @@ In summary we find that oxidized nitrogen in air and precipitation has been decr
 \begin{figure}
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/Nox_trends.png}
-	\caption{\label{fig:NOx_trends}Trends in oxidised nitrogen compounds from 2010-2019 for EMEP observations and model.The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles.}
+	\caption{\label{fig:NOx_trends}Trends in oxidised nitrogen compounds from 2010-2019 for EMEP observations and model.The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in NOx emission is indicated in the plot of \noii with secondary y-axes}
 \end{figure}
 
 
@@ -328,80 +326,79 @@ In summary, the observations and the model calculations confirms that very small
 \begin{figure}
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/Nred_trends.png}
-	\caption{\label{fig:Nred_trends}Trends in oxidised nitrogen components from 2010-2019 for EMEP observations and model.The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles.}
+	\caption{\label{fig:Nred_trends}Trends in oxidised nitrogen components from 2010-2019 for EMEP observations and model.The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in \nhiii emission is indicated in the plot of total ammonium with secondary y-axes}
 \end{figure}
 
 
 
 \begin{table}
-\caption{\label{tab:tnh4_stat} Average absolute and relative changes in  concentration of total ammonium (\nhiii+\nhiv) in air and aerosols}
+\caption{\label{tab:tnh4_stat} Absolute and relative change and corresponding confidence intervals in observed and modelled annual and seasonal aggregated concentrations of total ammonium (\nhiii+\nhiv) in air and aerosols at the sites with 75\% data coverage for the different time periods.The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              25 &          17 &          17 &                  -0.016 &  (-0.024, -0.007) & -0.019 &  (-0.027, -0.012) &                    -1.45 &  (-1.99, -0.91) & -1.33 &  (-1.54, -1.11) \\
-          & winter &              28 &           9 &          10 &                  -0.018 &  (-0.029, -0.008) & -0.023 &  (-0.033, -0.013) &                    -1.18 &  (-1.72, -0.64) & -1.13 &   (-1.46, -0.8) \\
-          & spring &              25 &          10 &          16 &                  -0.017 &  (-0.029, -0.006) & -0.023 &  (-0.032, -0.014) &                    -1.48 &  (-2.21, -0.75) & -1.42 &  (-1.66, -1.17) \\
-          & summer &              25 &          10 &          20 &                  -0.009 &  (-0.018, -0.001) & -0.017 &  (-0.024, -0.009) &                    -1.02 &  (-1.61, -0.44) & -1.41 &  (-1.68, -1.15) \\
-          & autumn &              24 &          11 &           5 &                  -0.015 &  (-0.025, -0.006) & -0.015 &  (-0.022, -0.009) &                    -1.67 &  (-2.27, -1.08) & -1.28 &  (-1.56, -0.99) \\
-2005-2019 & all &              27 &          12 &          11 &                  -0.019 &  (-0.029, -0.009) & -0.020 &  (-0.029, -0.011) &                    -1.90 &  (-2.55, -1.24) & -1.50 &  (-1.85, -1.15) \\
-2010-2019 & all &              27 &           6 &           7 &                  -0.017 &  (-0.026, -0.008) & -0.012 &  (-0.021, -0.004) &                    -2.31 &  (-3.25, -1.36) & -1.14 &  (-1.76, -0.52) \\
-2000-2010 & all &              36 &           6 &          13 &                  -0.024 &  (-0.035, -0.012) & -0.024 &  (-0.033, -0.015) &                    -1.50 &  (-2.22, -0.79) & -1.16 &  (-1.81, -0.51) \\
+2000-2019 & all &              25 &          17 &          18 &                  -0.016 &  (-0.024, -0.007) & -0.019 &  (-0.027, -0.012) &                    -1.45 &  (-1.99, -0.91) & -1.36 &  (-1.58, -1.14) \\
+          & winter &              28 &           9 &          10 &                  -0.018 &  (-0.029, -0.008) & -0.023 &  (-0.033, -0.013) &                    -1.18 &  (-1.72, -0.64) & -1.14 &  (-1.47, -0.81) \\
+          & spring &              25 &          10 &          16 &                  -0.017 &  (-0.029, -0.006) & -0.023 &  (-0.032, -0.015) &                    -1.48 &  (-2.21, -0.75) & -1.46 &   (-1.71, -1.2) \\
+          & summer &              25 &          10 &          20 &                  -0.009 &  (-0.018, -0.001) & -0.017 &  (-0.025, -0.009) &                    -1.02 &  (-1.61, -0.44) & -1.44 &  (-1.71, -1.18) \\
+          & autumn &              24 &          11 &           7 &                  -0.015 &  (-0.025, -0.006) & -0.016 &  (-0.023, -0.009) &                    -1.67 &  (-2.27, -1.08) & -1.32 &  (-1.61, -1.03) \\
+2005-2019 & all &              27 &          12 &          12 &                  -0.019 &  (-0.029, -0.009) & -0.020 &  (-0.029, -0.011) &                    -1.90 &  (-2.55, -1.24) & -1.53 &  (-1.88, -1.18) \\
+2010-2019 & all &              27 &           6 &           7 &                  -0.017 &  (-0.026, -0.008) & -0.012 &  (-0.021, -0.004) &                    -2.31 &  (-3.25, -1.36) & -1.12 &   (-1.75, -0.5) \\
+2000-2010 & all &              37 &           6 &          13 &                  -0.022 &   (-0.034, -0.01) & -0.024 &  (-0.033, -0.016) &                    -1.36 &  (-2.11, -0.62) & -1.20 &  (-1.82, -0.58) \\
 \bottomrule
 \end{tabular}}
 \end{center}
 \end{table}
 
 \begin{table}
-\caption{\label{tab:nh4pm_stat} Average absolute and relative changes in \nhiv concentrations in aerosols}
+\caption{\label{tab:nh4pm_stat} Absolute and relative change and corresponding confidence intervals in observed and modelled annual and seasonal aggregated concentrations of \nhiv in aerosols at the sites with 75\% data coverage for the different time periods.The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              21 &          15 &          19 &                  -0.024 &  (-0.033, -0.016) & -0.020 &  (-0.027, -0.013) &                    -2.61 &  (-3.01, -2.22) & -2.51 &   (-2.7, -2.32) \\
-          & winter &              22 &          10 &           9 &                  -0.019 &  (-0.035, -0.002) & -0.021 &  (-0.028, -0.013) &                    -1.47 &  (-2.49, -0.45) & -1.92 &   (-2.4, -1.43) \\
-          & spring &              20 &          17 &          15 &                  -0.032 &  (-0.043, -0.021) & -0.021 &  (-0.028, -0.014) &                    -3.09 &  (-3.64, -2.55) & -2.56 &  (-3.04, -2.08) \\
-          & summer &              20 &          14 &          19 &                  -0.017 &  (-0.023, -0.012) & -0.017 &  (-0.022, -0.012) &                    -2.78 &  (-3.22, -2.35) & -3.32 &  (-3.57, -3.07) \\
-          & autumn &              19 &          11 &          10 &                  -0.023 &  (-0.031, -0.014) & -0.021 &  (-0.031, -0.011) &                    -2.75 &  (-3.65, -1.85) & -2.48 &  (-2.72, -2.25) \\
-2005-2019 & all &              27 &          16 &          22 &                  -0.025 &  (-0.033, -0.017) & -0.021 &  (-0.027, -0.016) &                    -2.90 &  (-3.41, -2.38) & -2.90 &  (-3.08, -2.72) \\
-2010-2019 & all &              31 &          16 &          16 &                  -0.029 &  (-0.041, -0.017) & -0.019 &  (-0.027, -0.012) &                    -3.48 &   (-4.7, -2.26) & -3.15 &  (-3.84, -2.46) \\
-2000-2010 & all &              23 &           9 &          12 &                  -0.034 &   (-0.048, -0.02) & -0.034 &  (-0.045, -0.023) &                    -3.43 &   (-4.6, -2.27) & -3.08 &  (-3.54, -2.63) \\
+2000-2019 & all &              21 &          15 &          20 &                  -0.024 &  (-0.033, -0.016) & -0.021 &  (-0.028, -0.014) &                    -2.61 &  (-3.01, -2.22) & -2.61 &  (-2.79, -2.43) \\
+          & winter &              22 &          10 &           9 &                  -0.019 &  (-0.035, -0.002) & -0.020 &  (-0.028, -0.013) &                    -1.47 &  (-2.49, -0.45) & -1.94 &  (-2.43, -1.45) \\
+          & spring &              20 &          17 &          16 &                  -0.032 &  (-0.043, -0.021) & -0.022 &   (-0.03, -0.015) &                    -3.09 &  (-3.64, -2.55) & -2.74 &  (-3.17, -2.31) \\
+          & summer &              20 &          14 &          20 &                  -0.017 &  (-0.023, -0.012) & -0.018 &  (-0.023, -0.013) &                    -2.78 &  (-3.22, -2.35) & -3.39 &  (-3.62, -3.16) \\
+          & autumn &              19 &          11 &          11 &                  -0.023 &  (-0.031, -0.014) & -0.022 &  (-0.032, -0.012) &                    -2.75 &  (-3.65, -1.85) & -2.58 &   (-2.8, -2.35) \\
+2005-2019 & all &              27 &          16 &          23 &                  -0.025 &  (-0.033, -0.017) & -0.022 &  (-0.028, -0.016) &                    -2.90 &  (-3.41, -2.38) & -3.01 &   (-3.2, -2.83) \\
+2010-2019 & all &              31 &          16 &          17 &                  -0.029 &  (-0.041, -0.017) & -0.019 &  (-0.027, -0.012) &                    -3.48 &   (-4.7, -2.26) & -3.22 &   (-3.9, -2.54) \\
+2000-2010 & all &              23 &           9 &          12 &                  -0.034 &   (-0.048, -0.02) & -0.036 &  (-0.047, -0.024) &                    -3.43 &   (-4.6, -2.27) & -3.18 &  (-3.63, -2.73) \\
 \bottomrule
 \end{tabular}}
 \end{center}
 \end{table}
 
 \begin{table}
-\caption{\label{tab:nh3_stat} Average absolute and relative changes in \nhiii concentrations}
+\caption{\label{tab:nh3_stat} Absolute and relative change and corresponding confidence intervals in observed and modelled annual and seasonal aggregated concentrations of \nhiii at the sites with 75\% data coverage for the different time period.The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &               8 &           2 &           6 &                   0.010 &  (-0.005, 0.024) &  0.005 &  (-0.007, 0.017) &                     1.55 &    (0.22, 2.88) &  1.28 &     (0.2, 2.37) \\
-          & winter &               8 &           1 &           4 &                   0.007 &  (-0.001, 0.016) &  0.002 &  (-0.008, 0.011) &                     4.03 &    (0.61, 7.44) &  1.46 &   (-0.04, 2.95) \\
-          & spring &               8 &           3 &           2 &                   0.011 &   (-0.007, 0.03) &  0.003 &  (-0.005, 0.012) &                     1.76 &   (-0.32, 3.83) &  1.21 &     (0.0, 2.43) \\
-          & summer &               8 &           1 &           5 &                   0.013 &  (-0.009, 0.035) &  0.008 &  (-0.003, 0.019) &                     2.53 &    (-0.3, 5.36) &  1.79 &    (0.58, 3.01) \\
-          & autumn &               8 &           1 &           4 &                   0.008 &   (-0.005, 0.02) &  0.006 &  (-0.002, 0.015) &                     0.94 &   (-0.36, 2.24) &  1.30 &    (0.44, 2.16) \\
-2005-2019 & all &              17 &           3 &           7 &                   0.004 &  (-0.003, 0.012) & -0.001 &  (-0.012, 0.009) &                     0.54 &   (-0.33, 1.42) &  0.63 &   (-0.13, 1.39) \\
-2010-2019 & all &              22 &           4 &           5 &                   0.012 &  (-0.009, 0.032) &  0.001 &  (-0.017, 0.019) &                     2.80 &   (-1.35, 6.95) &  2.53 &    (0.63, 4.43) \\
-2000-2010 & all &              12 &           3 &           4 &                   0.003 &  (-0.021, 0.028) &  0.011 &  (-0.001, 0.023) &                     3.14 &     (0.5, 5.78) &  1.64 &    (0.09, 3.18) \\
+2000-2019 & all &               8 &           2 &           6 &                   0.010 &  (-0.005, 0.024) &  0.006 &  (-0.006, 0.017) &                     1.55 &    (0.22, 2.88) &  1.54 &   (0.42, 2.66) \\
+          & winter &               8 &           1 &           3 &                   0.007 &  (-0.001, 0.016) &  0.002 &  (-0.007, 0.011) &                     4.03 &    (0.61, 7.44) &  1.47 &    (0.1, 2.84) \\
+          & spring &               8 &           3 &           3 &                   0.011 &   (-0.007, 0.03) &  0.003 &  (-0.005, 0.011) &                     1.76 &   (-0.32, 3.83) &  1.46 &   (0.09, 2.84) \\
+          & summer &               8 &           1 &           6 &                   0.013 &  (-0.009, 0.035) &  0.009 &   (-0.002, 0.02) &                     2.53 &    (-0.3, 5.36) &  2.27 &   (0.88, 3.65) \\
+          & autumn &               8 &           1 &           4 &                   0.008 &   (-0.005, 0.02) &  0.007 &  (-0.001, 0.015) &                     0.94 &   (-0.36, 2.24) &  1.49 &   (0.65, 2.33) \\
+2005-2019 & all &              18 &           3 &           7 &                   0.005 &  (-0.002, 0.012) &  0.000 &   (-0.009, 0.01) &                     0.57 &   (-0.26, 1.39) &  0.84 &    (0.1, 1.59) \\
+2010-2019 & all &              22 &           4 &           5 &                   0.012 &  (-0.009, 0.032) &  0.001 &  (-0.017, 0.019) &                     2.80 &   (-1.35, 6.95) &  2.58 &   (0.67, 4.49) \\
+2000-2010 & all &              12 &           3 &           4 &                   0.003 &  (-0.021, 0.028) &  0.012 &     (0.0, 0.025) &                     3.14 &     (0.5, 5.78) &  1.99 &    (0.4, 3.57) \\
 \bottomrule
 \end{tabular}}
 \end{center}
 \end{table}
 
-
 \begin{table}
-\caption{\label{tab:nh4dep_stat} Average absolute and relative changes in wet deposition of ammonium}
+\caption{\label{tab:nh4dep_stat} Absolute and relative change and corresponding confidence intervals in observed and modelled annual and seasonal aggregated data of wet deposition of ammonium at the sites with 75\% data coverage for the different time period. The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.7}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
@@ -409,14 +406,14 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
           &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (mg $mm^{2} yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              44 &          13 &           8 &                    -7.4 &  (-11.8, -3.0) &  -4.6 &   (-7.9, -1.4) &                    -0.31 &   (-0.99, 0.37) & -0.38 &   (-0.7, -0.07) \\
-          & winter &              44 &           5 &           1 &                    -5.3 &   (-9.4, -1.3) &  -1.7 &    (-3.9, 0.4) &                    -0.25 &   (-0.94, 0.43) & -0.40 &  (-0.73, -0.08) \\
-          & spring &              42 &           5 &           3 &                   -12.2 &  (-19.4, -4.9) &  -4.7 &   (-11.4, 2.1) &                    -0.39 &    (-1.1, 0.31) & -0.25 &   (-0.63, 0.13) \\
-          & summer &              43 &           9 &           5 &                   -10.4 &  (-16.7, -4.1) &  -7.8 &  (-11.4, -4.2) &                    -0.12 &   (-1.17, 0.93) & -0.49 &  (-0.85, -0.12) \\
-          & autumn &              43 &          10 &           4 &                    -7.5 &  (-12.8, -2.3) &  -5.1 &   (-9.3, -0.9) &                    -0.45 &   (-1.37, 0.47) & -0.35 &    (-0.81, 0.1) \\
-2005-2019 & all &              52 &           8 &           4 &                    -4.8 &   (-10.7, 1.0) &  -3.3 &   (-6.4, -0.2) &                    -0.12 &   (-0.95, 0.71) & -0.44 &   (-0.8, -0.09) \\
-2010-2019 & all &              62 &           3 &           4 &                    -2.7 &    (-8.6, 3.1) &  -5.7 &  (-11.1, -0.4) &                     0.90 &   (-0.95, 2.75) & -0.42 &   (-1.02, 0.19) \\
-2000-2010 & all &              44 &           4 &           3 &                    -9.3 &  (-17.8, -0.8) &  -4.0 &   (-12.2, 4.2) &                    -0.36 &   (-1.24, 0.52) & -0.10 &    (-0.9, 0.71) \\
+2000-2019 & all &              44 &          13 &           9 &                    -7.4 &  (-11.8, -3.0) &  -4.8 &   (-8.1, -1.5) &                    -0.31 &   (-0.99, 0.37) & -0.40 &  (-0.71, -0.09) \\
+          & winter &              44 &           5 &           3 &                    -5.3 &   (-9.4, -1.3) &  -1.7 &    (-3.8, 0.4) &                    -0.25 &   (-0.94, 0.43) & -0.39 &  (-0.72, -0.06) \\
+          & spring &              42 &           5 &           4 &                   -12.2 &  (-19.4, -4.9) &  -4.7 &   (-11.5, 2.1) &                    -0.39 &    (-1.1, 0.31) & -0.27 &   (-0.64, 0.11) \\
+          & summer &              43 &           9 &           6 &                   -10.4 &  (-16.7, -4.1) &  -8.0 &  (-11.6, -4.4) &                    -0.12 &   (-1.17, 0.93) & -0.48 &  (-0.84, -0.12) \\
+          & autumn &              43 &          10 &           4 &                    -7.5 &  (-12.8, -2.3) &  -5.2 &   (-9.3, -1.0) &                    -0.45 &   (-1.37, 0.47) & -0.35 &    (-0.8, 0.11) \\
+2005-2019 & all &              52 &           8 &           4 &                    -4.8 &   (-10.7, 1.0) &  -3.4 &   (-6.4, -0.3) &                    -0.12 &   (-0.95, 0.71) & -0.43 &  (-0.78, -0.08) \\
+2010-2019 & all &              62 &           3 &           4 &                    -2.7 &    (-8.6, 3.1) &  -5.8 &  (-11.1, -0.4) &                     0.90 &   (-0.95, 2.75) & -0.47 &   (-1.04, 0.11) \\
+2000-2010 & all &              44 &           4 &           3 &                    -9.3 &  (-17.8, -0.8) &  -4.0 &   (-12.2, 4.2) &                    -0.36 &   (-1.24, 0.52) & -0.09 &   (-0.91, 0.73) \\
 \bottomrule
 \end{tabular}}
 \end{center}
@@ -437,22 +434,22 @@ Figure~\ref{fig:pm_trends} shows an overview of the annual and seasonal observed
 
 
 \begin{table}
-\caption{\label{tab:pm10_stat} Average absolute and relative changes in \PM[10]}
+\caption{\label{tab:pm10_stat} Absolute and relative change and corresponding confidence intervals in observed and modelled annual and seasonal aggregated concentration of \PM[10] at the sites with 75\% data coverage for the different time period. The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              37 &          29 &          36 &                   -0.36 &  (-0.43, -0.29) & -0.27 &  (-0.31, -0.24) &                    -1.83 &  (-2.09, -1.57) & -1.92 &  (-2.08, -1.75) \\
-          & autumn &              35 &          22 &          29 &                   -0.34 &  (-0.42, -0.26) & -0.27 &  (-0.31, -0.24) &                    -1.81 &   (-2.1, -1.51) & -1.85 &  (-2.03, -1.67) \\
-          & spring &              34 &          24 &          32 &                   -0.39 &  (-0.47, -0.31) & -0.29 &  (-0.34, -0.25) &                    -1.84 &  (-2.11, -1.56) & -2.04 &  (-2.23, -1.86) \\
-          & summer &              36 &          27 &          32 &                   -0.34 &  (-0.42, -0.25) & -0.30 &  (-0.35, -0.24) &                    -1.72 &  (-2.09, -1.35) & -2.22 &  (-2.44, -1.99) \\
-          & winter &              34 &          18 &          20 &                   -0.36 &  (-0.47, -0.25) & -0.27 &  (-0.32, -0.22) &                    -1.73 &   (-2.07, -1.4) & -1.69 &   (-1.88, -1.5) \\
-2005-2019 & all &              54 &          29 &          37 &                   -0.33 &  (-0.41, -0.25) & -0.22 &  (-0.26, -0.19) &                    -1.82 &  (-2.23, -1.41) & -1.80 &  (-2.05, -1.54) \\
-2010-2019 & all &              56 &          17 &          26 &                   -0.32 &  (-0.42, -0.21) & -0.17 &  (-0.22, -0.13) &                    -1.84 &  (-2.45, -1.23) & -1.51 &   (-1.9, -1.12) \\
-2000-2010 & all &              36 &          14 &          23 &                   -0.46 &  (-0.56, -0.36) & -0.32 &  (-0.42, -0.22) &                    -2.36 &  (-2.77, -1.95) & -2.25 &  (-2.83, -1.68) \\
+2000-2019 & all &              37 &          29 &          36 &                   -0.36 &  (-0.43, -0.29) & -0.29 &  (-0.32, -0.25) &                    -1.83 &  (-2.09, -1.57) & -1.95 &  (-2.11, -1.79) \\
+          & winter &              34 &          18 &          20 &                   -0.36 &  (-0.47, -0.25) & -0.26 &  (-0.31, -0.21) &                    -1.73 &   (-2.07, -1.4) & -1.64 &  (-1.83, -1.45) \\
+          & spring &              34 &          24 &          32 &                   -0.39 &  (-0.47, -0.31) & -0.30 &  (-0.35, -0.25) &                    -1.84 &  (-2.11, -1.56) & -2.10 &   (-2.29, -1.9) \\
+          & summer &              36 &          27 &          31 &                   -0.34 &  (-0.42, -0.25) & -0.32 &  (-0.37, -0.26) &                    -1.72 &  (-2.09, -1.35) & -2.25 &  (-2.47, -2.03) \\
+          & autumn &              35 &          22 &          29 &                   -0.34 &  (-0.42, -0.26) & -0.30 &  (-0.34, -0.26) &                    -1.81 &   (-2.1, -1.51) & -1.91 &  (-2.09, -1.74) \\
+2005-2019 & all &              54 &          29 &          38 &                   -0.33 &  (-0.41, -0.25) & -0.23 &  (-0.27, -0.19) &                    -1.82 &  (-2.23, -1.41) & -1.79 &  (-2.07, -1.51) \\
+2010-2019 & all &              56 &          17 &          23 &                   -0.32 &  (-0.42, -0.21) & -0.16 &  (-0.21, -0.11) &                    -1.84 &  (-2.45, -1.23) & -1.38 &  (-1.81, -0.95) \\
+2000-2010 & all &              36 &          14 &          24 &                   -0.46 &  (-0.56, -0.36) & -0.35 &  (-0.46, -0.24) &                    -2.36 &  (-2.77, -1.95) & -2.40 &  (-2.97, -1.83) \\
 \bottomrule
 \end{tabular}}
 \end{center}
@@ -460,22 +457,23 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 
 \begin{table}
-\caption{\label{tab:pm25_stat} Average absolute and relative changes in \PM[25]}
+\caption{\label{tab:pm25_stat} Absolute and relative change and corresponding confidence intervals in observed and modelled annual and seasonal aggregated concentration of \PM[25] at the sites with 75\% data coverage for the different time period. The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              19 &          16 &          19 &                   -0.29 &   (-0.39, -0.2) & -0.25 &  (-0.29, -0.21) &                    -2.42 &   (-2.84, -2.0) & -2.50 &  (-2.71, -2.29) \\
-          & winter &              18 &          12 &          14 &                   -0.36 &  (-0.54, -0.18) & -0.21 &  (-0.25, -0.17) &                    -2.29 &  (-2.74, -1.85) & -2.11 &  (-2.39, -1.83) \\
-          & spring &              19 &          14 &          19 &                   -0.32 &  (-0.41, -0.24) & -0.26 &   (-0.3, -0.22) &                    -2.47 &  (-2.91, -2.03) & -2.64 &  (-2.82, -2.45) \\
-          & summer &              18 &          14 &          17 &                   -0.26 &  (-0.33, -0.19) & -0.28 &  (-0.35, -0.22) &                    -2.36 &  (-2.91, -1.82) & -2.78 &  (-3.12, -2.45) \\
-          & autumn &              18 &          12 &          16 &                   -0.26 &  (-0.36, -0.15) & -0.24 &  (-0.31, -0.17) &                    -2.22 &  (-2.71, -1.74) & -2.24 &  (-2.47, -2.01) \\
-2005-2019 & all &              36 &          23 &          27 &                   -0.33 &  (-0.42, -0.23) & -0.21 &  (-0.25, -0.17) &                    -2.66 &  (-3.16, -2.16) & -2.28 &  (-2.53, -2.04) \\
-2010-2019 & all &              43 &          20 &          19 &                   -0.34 &  (-0.43, -0.25) & -0.19 &  (-0.24, -0.14) &                    -3.14 &   (-3.7, -2.57) & -2.28 &  (-2.71, -1.85) \\
-2000-2010 & all &              20 &           7 &          13 &                   -0.36 &   (-0.5, -0.21) & -0.34 &  (-0.43, -0.25) &                    -2.65 &  (-3.56, -1.73) & -2.88 &  (-3.51, -2.25) \\
+2000-2019 & all &              19 &          16 &          19 &                   -0.29 &   (-0.39, -0.2) & -0.26 &  (-0.31, -0.22) &                    -2.42 &   (-2.84, -2.0) & -2.52 &  (-2.71, -2.32) \\
+          & winter &              18 &          12 &          12 &                   -0.36 &  (-0.54, -0.18) & -0.21 &  (-0.25, -0.17) &                    -2.29 &  (-2.74, -1.85) & -2.08 &  (-2.35, -1.82) \\
+          & spring &              19 &          14 &          19 &                   -0.32 &  (-0.41, -0.24) & -0.27 &  (-0.31, -0.22) &                    -2.47 &  (-2.91, -2.03) & -2.69 &  (-2.88, -2.51) \\
+          & summer &              18 &          14 &          17 &                   -0.26 &  (-0.33, -0.19) & -0.30 &  (-0.36, -0.23) &                    -2.36 &  (-2.91, -1.82) & -2.81 &  (-3.16, -2.47) \\
+          & autumn &              18 &          12 &          16 &                   -0.26 &  (-0.36, -0.15) & -0.26 &  (-0.33, -0.18) &                    -2.22 &  (-2.71, -1.74) & -2.29 &   (-2.5, -2.07) \\
+2005-2019 & all &              36 &          23 &          28 &                   -0.33 &  (-0.42, -0.23) & -0.21 &  (-0.25, -0.17) &                    -2.66 &  (-3.16, -2.16) & -2.28 &  (-2.55, -2.01) \\
+2010-2019 & all &              43 &          20 &          19 &                   -0.34 &  (-0.43, -0.25) & -0.18 &  (-0.23, -0.13) &                    -3.14 &   (-3.7, -2.57) & -2.21 &  (-2.67, -1.74) \\
+2000-2010 & all &              20 &           7 &          12 &                   -0.36 &   (-0.5, -0.21) & -0.36 &  (-0.46, -0.26) &                    -2.65 &  (-3.56, -1.73) & -2.93 &  (-3.58, -2.27) \\
+
 \bottomrule
 \end{tabular}}
 \end{center}
